<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_palaces"
            android:icon="@drawable/ic_menu_palaces"
            android:title="@string/menu_palaces" />
        <item
            android:id="@+id/nav_churches"
            android:icon="@drawable/ic_menu_churches"
            android:title="@string/menu_churches" />
        <item
            android:id="@+id/nav_theaters"
            android:icon="@drawable/ic_menu_theaters"
            android:title="@string/menu_theaters" />
        <item
            android:id="@+id/nav_squares"
            android:icon="@drawable/ic_menu_squares"
            android:title="@string/menu_squares" />
    </group>

</menu>
